@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2011,v 1.1586 2011/06/28 10:11:37 obache Exp $
+$NetBSD: CHANGES-2011,v 1.1587 2011/06/28 16:25:14 manu Exp $
 
 [WARNING - pkgsrc is in a FREEZE for new functionality and infrastructure
 changes right now - if you have any doubts that you should be making any
@@ -2480,3 +2480,4 @@ Changes to the packages collection and infrastructure in 2011:
 	Updated mail/claws-mail to 3.7.8nb2 [gls 2011-06-27]
 	Updated devel/cppunit to 1.12.1nb1 [wiz 2011-06-28]
 	Updated www/curl to 7.21.7 [obache 2011-06-28]
+	Updated filesystems/perfuse to 20110828 [manu 2011-06-28]
